Transferred database to docker, added provisioning folder with docker-compose.yml. Finished getting chat members functionality. Implemented setting getting chat member for specific person and setting chat mute for a chat member.